Fix alignment issues.

--- a/styles.css
+++ b/styles.css
@@ -18,22 +18,20 @@ body {
   min-height: 100%;
   height: 100%;
   width: 100%;
+  /* border: 2px solid yellow; */
 }
 
 body {
   display: -webkit-box;
+  display: -flexbox;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   background: var(--light-bg);
   background-size: cover, contain;
   background-position: center, right bottom;
   background-repeat: no-repeat, no-repeat;
   font-family: 'Cormorant Garamond', serif;
-  /* border: 2px solid orange; */
 }
 
 body.dark-theme {
@@ -81,149 +79,96 @@ svg {
 }
 
 #title {
+  position: relative;
   visibility: visible;
-  height: 90%;
-  max-width: 90%;
+  max-width: 100%;
+  border: 1px solid purple;
+  align-self: center;
 }
 
 #clock {
   position: fixed;
   top: 0%;
   right: -10%;
-  -webkit-transform: scale(140%);
-  -ms-transform: scale(140%);
   transform: scale(140%);
   rotate: -45deg;
-  /* border: 5px solid red; */
+  /* border: 5px solid orangered; */
 }
 
 .flex-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   gap: 5%;
   margin: 3rem 4rem;
   top: 0;
   left: 0;
-  /* flex-wrap: wrap-reverse; */
 }
 
 .left-col {
-  -ms-flex-preferred-size: 30%;
+  display: flex;
+  flex-direction: column;
   flex-basis: 30%;
-  -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
   flex-grow: 1;
-  -ms-flex-negative: 0;
   flex-shrink: 0;
   text-align: center;
+  max-block-size: 90vh;
+  border: 1px solid blue;
 }
 
 .right-col {
   display: block;
-  -ms-flex-preferred-size: 60%;
   flex-basis: 60%;
-  -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
   flex-grow: 1;
-  -ms-flex-negative: 1;
   flex-shrink: 1;
+  /* border: 1px solid red; */
 }
 
 .flex-container {
-  margin: 3rem 0;
-  padding: 0;
+  margin: 2rem 0;
+  padding: 2rem 0;
   display: flow-root;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   text-align: center;
 }
 
 .arrow {
-  -webkit-transform: translate(0%, -45%);
-  -ms-transform: translate(0%, -45%);
   transform: translate(0%, -45%);
   width: 2.5rem;
   stroke: var(--light-text);
 }
 
 .right {
-  -webkit-animation: 0.8s linear PointLeft infinite;
   animation: 0.8s linear PointLeft infinite;
-}
-
-@-webkit-keyframes PointLeft {
-  0% {
-    -webkit-transform: translate(20%, -45%);
-    transform: translate(20%, -45%);
-  }
-
-  10% {
-    -webkit-transform: translate(0%, -45%);
-    transform: translate(0%, -45%);
-  }
-
-  100% {
-    -webkit-transform: translate(20%, -45%);
-    transform: translate(20%, -45%);
-  }
 }
 
 @keyframes PointLeft {
   0% {
-    -webkit-transform: translate(20%, -45%);
     transform: translate(20%, -45%);
   }
 
   10% {
-    -webkit-transform: translate(0%, -45%);
     transform: translate(0%, -45%);
   }
 
   100% {
-    -webkit-transform: translate(20%, -45%);
     transform: translate(20%, -45%);
   }
 }
 
 .left {
-  -webkit-animation: 0.8s linear PointRight infinite;
   animation: 0.8s linear PointRight infinite;
-}
-
-@-webkit-keyframes PointRight {
-  0% {
-    -webkit-transform: translate(-20%, -45%);
-    transform: translate(-20%, -45%);
-  }
-
-  10% {
-    -webkit-transform: translate(0%, -45%);
-    transform: translate(0%, -45%);
-  }
-
-  100% {
-    -webkit-transform: translate(-20%, -45%);
-    transform: translate(-20%, -45%);
-  }
 }
 
 @keyframes PointRight {
   0% {
-    -webkit-transform: translate(-20%, -45%);
     transform: translate(-20%, -45%);
   }
 
   10% {
-    -webkit-transform: translate(0%, -45%);
     transform: translate(0%, -45%);
   }
 
   100% {
-    -webkit-transform: translate(-20%, -45%);
     transform: translate(-20%, -45%);
   }
 }
@@ -237,30 +182,15 @@ svg {
 }
 
 #generate-img {
-  -webkit-animation: Spin 18s linear infinite;
   animation: Spin 18s linear infinite;
-}
-
-@-webkit-keyframes Spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
 }
 
 @keyframes Spin {
   0% {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
   100% {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
@@ -277,24 +207,18 @@ button:hover {
 }
 
 .btn-pop {
-  -webkit-transition: ease-out 0.1s;
-  -o-transition: ease-out 0.1s;
   transition: ease-out 0.1s;
   cursor: pointer;
   height: 2rem;
   width: 2rem;
-  margin: 0 0.4rem;
+  margin: 0 0.3rem;
 }
 
 .btn-pop:hover {
-  -webkit-transform: scale(120%);
-  -ms-transform: scale(120%);
   transform: scale(120%);
 }
 
 .btn-pop:active {
-  -webkit-transform: scale(105%);
-  -ms-transform: scale(105%);
   transform: scale(105%);
 }
 
@@ -315,30 +239,13 @@ footer a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
   top: 1rem;
-  right: 0;
-}
-
-#kofi {
-  width: auto;
+  right: 2rem;
 }
 
 @media (orientation: portrait) {
-  .header {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-    -ms-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-    top: 4rem;
-    right: -1rem;
-  }
-
   .btn-pop {
-    margin: 0.2rem 0;
     height: 1.9rem;
     width: 1.9rem;
   }
@@ -352,24 +259,19 @@ footer a {
     bottom: 0;
     top: auto;
     left: 50%;
-    -webkit-transform: translate(-50%, 0%);
-    -ms-transform: translate(-50%, 0%);
     transform: translate(-50%, 0%);
-  }
-
-  #generate-button {
-    position: relative;
+    transform: translate(-50%, 0%);
   }
 
   .right-col {
     display: none;
-    -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
   }
 
   .left-col {
     margin: 0;
     padding: 0;
+    max-block-size: 70%;
   }
 
   button {
@@ -388,10 +290,9 @@ footer a {
 
   #clock {
     position: absolute;
-    -webkit-transform: translate(35%, 10%);
-    -ms-transform: translate(35%, 10%);
     transform: translate(35%, 10%);
     height: 110%;
+    overflow: hidden;
   }
 
   footer p,
